# oh-my-PDF

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build_all.py  pytest.ini
backend/: README.md  build_backend.py  pyproject.toml
backend/build_py/pdf-toolbox-server/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  warn-pdf-toolbox-server.txt  xref-pdf-toolbox-server.html
backend/src/: main.py
backend/src/plugins/: base.py  bridge.py  deepseek.py  mineru.py  paddle.py
backend/src/services/: bookmark_service.py  llm_service.py  ocr_service.py
backend/src/utils/: hocr.py  mineru_api.py
backend/tests/: test_bookmark_service.py  test_build_backend.py  test_main_api.py  test_ocr_service.py
frontend/: .npmrc  index.html  package-lock.json  package.json  vite.config.ts
frontend/electron/: main.ts  preload.ts
frontend/src/: App.tsx
frontend/src/components/: BookmarkEditor.tsx  BookmarkWorkspace.tsx  EngineSelector.tsx  ProgressBar.tsx  SettingsPanel.tsx  temp_settings.txt
frontend/src/utils/: api.test.ts  api.ts  bookmarkUtils.test.ts  bookmarkUtils.ts  i18n.ts
tests/: README.md  conftest.py  run_tests.py
tests/helpers/: pdf_alignment.py
tests/integration/: test_local_workflows.py  test_pdf_text_layer_alignment.py
tests/unit/: test_hocr_and_plugins.py  test_llm_and_mineru_clients.py  test_release_sync.py
